# RxNorm

./: .gitignore  AGENTS.md  CASE_PAGE_POLISH_REPORT.md  PLAN.md  PROJECT_HANDOFF.md  README.md  RxNorm_Project_Summary.md  Supabase_Taiwan_RxNorm_DB_Prompt_and_Guide.md  handoff.md  pyproject.toml  response.json  tmp_remote_chunked_import.py
.sisyphus/plans/: layout-preserving-ocr.md
.trae/plans/: 2026-05-21-expo-patient-mvp.md  2026-05-22-ocr-grouping-instruction-debug.md
Datasets/: A21030000I-E41002-002.csv  ATC_DDD_fabkury_merged.csv
Datasets/DDI/: ddinter_drug_names_unique.csv  ddinter_name_map_template.csv
Datasets/Exported/: rx_ingredient_concepts_rows.csv
Prompts/: TRAE_next_steps_cleanup_and_qc_prompt.txt
docs/: ddi.md  option_a_hydrate_salt_followup.md  qc_metrics.md  supabase_storage_policy.md  verification_queries.sql
etl/: __init__.py  config.py  curated_build.py  curated_repository.py  db.py  ddi_case_evaluator.py  import_ddi_ddinter.py  import_raw.py  patch_ddi_name_map_manual.py  paths.py  qc_report.py  raw_import.py  raw_repository.py  rebuild_curated.py  report_qc.py  utils.py
rxnorm_taiwan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_curated_build.py  test_curated_release.py  test_ddi_case_evaluator.py  test_docs_runbook.py  test_import_ddi_ddinter.py  test_import_raw_cli.py  test_migrations.py  test_packaging.py  test_patch_ddi_name_map_manual.py  test_paths.py  test_qc_report.py  test_raw_import_parsers.py  test_raw_import_repository.py  test_rebuild_curated_cli.py  test_report_qc_cli.py  test_utils.py
(+175 files in other folders)
